Set java 8, gradle update and other fixes